--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,15 +10,15 @@
   "editor.matchBrackets": "always",
   "editor.minimap.enabled": false,
   "editor.smoothScrolling": true,
-  "editor.tabSize": 2,
+  "editor.tabSize": 4,
   "editor.useTabStops": true,
   "emmet.triggerExpansionOnTab": true,
   "explorer.openEditors.visible": 0,
   "files.autoSave": "afterDelay",
   "screencastMode.onlyKeyboardShortcuts": true,
   "terminal.integrated.fontSize": 18,
-  "workbench.activityBar.visible": true,
   "workbench.colorTheme": "Visual Studio Dark",
   "workbench.fontAliasing": "antialiased",
-  "workbench.statusBar.visible": true
+  "workbench.statusBar.visible": true,
+  "python.envFile": "${workspaceFolder}/sqlalchemy-workspace"
 }
