--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,5 +20,7 @@
   "workbench.activityBar.visible": true,
   "workbench.colorTheme": "Visual Studio Dark",
   "workbench.fontAliasing": "antialiased",
-  "workbench.statusBar.visible": true
+  "workbench.statusBar.visible": true,
+  "python.envFile": "${workspaceFolder}/sqlalchemy-workspace",
+  "python.defaultInterpreterPath": "${workspaceFolder}/sqlalchemy-workspace/bin/python"
 }
